# open_vins

./: .gitmodules  CMakeLists.txt  ILLIXR_INSTRUCTIONS.md  Makefile  ReadMe.md  install_deps.sh
ILLIXR/: Makefile  README.md
ov_core/: CMakeLists.txt
ov_core/src/feat/: Feature.cpp  Feature.h  FeatureInitializer.h
ov_core/src/init/: InertialInitializer.cpp  InertialInitializer.h
ov_core/src/sim/: BsplineSE3.cpp  BsplineSE3.h
ov_core/src/track/: Grider_DOG.h  Grider_FAST.h  TrackAruco.cpp  TrackAruco.h  TrackBase.cpp  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackKLT.h  TrackSIM.h
ov_core/src/types/: IMU.h  JPLQuat.h  Landmark.h  PoseJPL.h  Type.h  Vec.h
ov_eval/: CMakeLists.txt
ov_msckf/: CMakeLists.txt
ov_msckf/cmake/: ROS1.cmake
ov_msckf/src/: read_hpm.h  run_illixr.cpp  run_illixr_msckf.cpp  run_illixr_stal.cpp  slam2.cpp
ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerOptions.h
ov_msckf/src/sim/: Simulator.cpp  Simulator.h
ov_msckf/src/state/: Propagator.cpp  Propagator.h  State.h  StateHelper.h  StateOptions.h
ov_msckf/src/update/: UpdaterHelper.cpp  UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterSLAM.cpp  UpdaterSLAM.h
